# mimick_vendor-release

./: 0001-Suppress-fortification-in-RPM-builds.patch  CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  copyright  gbp.conf  rules
rpm/: ros-galactic-mimick-vendor.spec  ros-iron-mimick-vendor.spec  ros-jazzy-mimick-vendor.spec  ros-kilted-mimick-vendor.spec  ros-rolling-mimick-vendor.spec  template.spec  template.spec.em
