<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>mimick_vendor</name>
  <version>0.1.1</version>
  <description>
    Wrapper around mimick, it provides an ExternalProject build of mimick.
  </description>
  <maintainer email="jjperez@ekumenlabs.com">Jorge J. Perez</maintainer>
  <license>Apache License 2.0</license>  <!-- the contents of this package are Apache 2.0 -->
  <license>MIT</license>  <!-- mimick is MIT -->

  <url type="website">https://github.com/Snaipe/Mimick</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
